<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="40dp"
    android:layout_height="match_parent"
    tools:context=".Registeration">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:hint="@string/name"
        android:ems="13"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:inputType="text"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:hint="@string/email"
        android:ems="13"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:hint="@string/mobile"
        android:ems="13"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:inputType="number"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/register"
        android:text="@string/reg"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="22dp"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        android:ems="13"/>

</LinearLayout>