<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="40dp"
    tools:context=".Login">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:hint="@string/email"
        android:ems="13"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:hint="@string/password"
        android:ems="13"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginBottom="70dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/login"
        android:text="@string/log"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="22dp"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        android:ems="13"/>


</LinearLayout>